# myCdata

./: CMakeLists.txt
header/: seqList.h
src/: main.c  seqList.c
